# hstream

./: .gitmodules  cabal.project  hie.yaml
common/server/HStream/Common/Server/: HashRing.hs  Lookup.hs
hstream-broker/: cabal.project  hstream-broker.cabal
hstream-broker/HStream/Broker/: API.hs  API.proto
hstream-broker/app/: Client.hs  Server.hs
hstream-kafka/: hstream-kafka.cabal
hstream-kafka/HStream/Kafka/Common/: Acl.hs  Authorizer.hs  OffsetManager.hs  Resource.hs  Security.hs
hstream-kafka/HStream/Kafka/Server/Handler/: Produce.hs
hstream-kafka/HStream/Kafka/Server/Security/: Authorizer.hs
hstream-kafka/protocol/Kafka/Protocol/Message/: Struct.hs  Total.hs
hstream-kafka/tests/common/Kafka/Common/: ResourceSpec.hs
hstream-sql/: cabal.project  hstream-sql.cabal
hstream-sql/src/Language/SQL/: Codegen.hs  Extra.hs
hstream/app/: server.hs
hstream/app/lib/: KafkaServer.hs
hstream/sql-example-logdevice/: Example.hs
